# C-Chat-Server-Client

./: .devcontainer.json  CMakeLists.txt  README.md
.nvim/: CMakeLists.txt.2025-04-27T181301-0700.hash
include/: client.h  server.h
src/: client.c  server.c  serverBackup.c  serverTest
tests/: run_tests  server_tests.c
